Finally add a license and a readme

--- a/tournament/template.html
+++ b/tournament/template.html
@@ -37,7 +37,7 @@ The basic idea is inspired by <a href="https://www.youtube.com/watch?v=DpXy041BI
   <li>Instead of writing all the algorithms myself, enable and encourage everyone else to write and easily compare them.</li>
   <li>Because of that, and also because it's fun in and of itself, write a lot of assembly.</li>
   <li>Try to enforce programmatically that the algorithms don't just brute-force the solution.</li>
-  <li>Have a neat website that presents the results. You're currently reading it. In particular I liked the table at the end of <a href="http://tom7.org/chess/weak.pdf">Tom7's paper</a>.</li>
+  <li>Have a neat website that presents the results. You're currently reading it. In particular I liked the table at the end of <a href="http://tom7.org/chess/weak.pdf">Tom7's paper</a>, so I gotta have something similar.</li>
 </ul>
 </p>
 
