--- a/tournament/template_total_summary.html
+++ b/tournament/template_total_summary.html
@@ -12,6 +12,8 @@
 <link rel="apple-touch-icon" href="favicon.png">
 <link rel="shortcut icon" href="favicon.png">
 <link rel="stylesheet" href="bootstrap_4.5.1.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
+<!-- Inline styles would break my ad-hoc templating thing. -->
+<link rel="stylesheet" href="app.css">
 </head>
 <body>
 
@@ -45,7 +47,9 @@ The basic idea is inspired by <a href="https://www.youtube.com/watch?v=DpXy041BI
 I'd love to hear your feedback, or any other kind of issue:<br/>
 <a class="text-monospace" href="https://github.com/BenWiederhake/tinyvm/issues/new">https://github.com/BenWiederhake/tinyvm/issues/new</a></p>
 
-<h2>Tournament results</h2>
+<h2 id="results">Tournament results</h2>
+
+<p>Numbers are wins/draws/losses, with color interpolation as green/blue/red. The row-player goes first, the column-player goes second.</p>
 
 <p>{overview_table}</p>
 
