Generate a JSON file with all results

--- a/tournament/template_total_summary.html
+++ b/tournament/template_total_summary.html
@@ -7,7 +7,7 @@
 <meta name="format-detection" content="telephone=no">
 <meta name="description" content="Silly tournament page of terrible Connect4 algorithms">
 <meta name="keywords" content="silly, tournament, connect4, algorithms, simulation, competition">
-<title>Conenct4 tournament on a tiny VM</title>
+<title>Connect4 tournament on a tiny VM</title>
 <link rel="canonical" href="https://BenWiederhake.github.io/tinyvm/">
 <link rel="apple-touch-icon" href="favicon.png">
 <link rel="shortcut icon" href="favicon.png">
