Encourage readers to write more bots

--- a/tournament/template_total_summary.html
+++ b/tournament/template_total_summary.html
@@ -53,6 +53,18 @@ I'd love to hear your feedback, or any other kind of issue:<br/>
 
 <p>{overview_table}</p>
 
+<h2>Write more Connect4 bots!</h2>
+<p>Come on, let's write even more Connect4 algorithms, the sillier the better!</p>
+
+<ul>
+  <li>A simple algorithm that first plays in the first column, then the second column, etc., is <a href="https://github.com/BenWiederhake/tinyvm/blob/master/vms/connect4/horizontal_mod.asm"><code>horizontal_mod.asm</code></a>.</li>
+  <li>A more involved algorithm that tries to imitate the previous player's move (if legal; else, a random legal column), is <a href="https://github.com/BenWiederhake/tinyvm/blob/master/vms/connect4/imitate_if_legal.asm"><code>imitate_if_legal.asm</code></a>.</li>
+  <li>There is <a href="https://github.com/BenWiederhake/tinyvm/blob/master/assembler/README.md">documentation of the assembly language</a>.</li>
+  <li>There is <a href="https://github.com/BenWiederhake/tinyvm/blob/master/instruction-set-architecture.md">documentation of every single instruction</a>.</li>
+  <li>If you really want to, there's a lot of <a href="https://github.com/BenWiederhake/tinyvm/blob/master/assembler/asm_test.py#L74">tests for every single aspect of the assembler</a> and a lot of <a href="https://github.com/BenWiederhake/tinyvm/blob/master/tests/instructions.rs#L135">tests for every single aspect of the VM / virtual CPU</a>.</li>
+  <li>What are you waiting for? <a href="https://github.com/BenWiederhake/tinyvm/fork">Create your own silly bot today!</a></li>
+</ul>
+
 <h2>Epilogue</h2>
 <p>Live a good life, be kind, advance civilization; and if you somehow manage to make a lot of money from this advice, consider saying thanks by giving me 1% of the profit.</p>
 
