--- a/tournament/template_total_summary.html
+++ b/tournament/template_total_summary.html
@@ -71,6 +71,9 @@ I'd love to hear your feedback, or any other kind of issue:<br/>
 <p class="small text-muted">This page was last rebuilt on {last_build}.</p>
 <p class="small text-muted">The raw data on this webpage is also available as a <a href="results_general.json">JSON file</a>.</p>
 
+<!-- I really hate it if there's not even a little bit of tasteful vertical blank space to indicate "end of scrollable area", so insert it here by force: -->
+<div class="py-4"></div>
+
 </main>
 
 <nav class="fixed-bottom bg-light d-flex p-2 flex-row flex-wrap justify-content-between align-items-center">
