Website: Add .logo CSS class

--- a/tournament/template_total_summary.html
+++ b/tournament/template_total_summary.html
@@ -78,7 +78,7 @@ I'd love to hear your feedback, or any other kind of issue:<br/>
 
 <nav class="fixed-bottom bg-light d-flex p-2 flex-row flex-wrap justify-content-between align-items-center">
   <div class="mx-2">
-    <img src="logo.png">
+    <img class="logo" src="logo.png">
   </div>
 
   <div class="mx-2">
