Make the webpages slightly nicer

--- a/tournament/template_single_matchup.html
+++ b/tournament/template_single_matchup.html
@@ -19,10 +19,10 @@
 
 <main class="container my-5 pb-5" id="content">
 
-<h1><code>{vm_one}</code> against <code>{vm_two}</code></h1>
-<p>This TinyVM tournament page is about how {vm_one} fares as an <em>attacker</em> against {vm_two}. There's a different page for the <a href="{reverse_matchup_filename}">reverse matchup</a>. For a more general overview, visit the <a href="index.html#results">overview page</a>.</p>
+<h1>TinyVM Connect4 Tournament – Specific Matchup</h1>
 
-<h2>Overview</h2>
+<h2><code>{vm_one}</code> against <code>{vm_two}</code></h2>
+<p>This page is about how {vm_one} fares as an <em>attacker</em> against {vm_two}. There's a different page for the <a href="{reverse_matchup_filename}">reverse matchup</a>. For a more general overview, visit the <a href="index.html#results">overview page</a>.</p>
 
 <div class="matchup-big-summary" style="background-color: {matchup_color};">{wins} win{wins_plural}, {draws} draw{draws_plural}, and {losses} loss{losses_plural}</div>
 
