Implement score computation and ordering, reduce max time, increase trials

--- a/tournament/template_total_summary.html
+++ b/tournament/template_total_summary.html
@@ -53,6 +53,13 @@ I'd love to hear your feedback, or any other kind of issue:<br/>
 
 <p>{overview_table}</p>
 
+<p>Scores are computes extremely simply: It's the average win rate minus the
+average loss rate, therefore must be in the interval [-1, +1], where the
+extremes are impractical to reach. Note in particular that draws only
+indirectly affect the score: If A wins 10% of the time against B, draws 70% of
+the time, and loses 20% of the time against B, then "win rate minus loss rate"
+is -20% for this matchup.</p>
+
 <h2>Write more Connect4 bots!</h2>
 <p>Come on, let's write even more Connect4 algorithms, the sillier the better!</p>
 
